tests/ui/feature-gates/doc-rust-logo.stderr
error[E0658]: the `#[doc(rust_logo)]` attribute is used for Rust branding
  --> $DIR/doc-rust-logo.rs:1:8
   |
LL | #![doc(rust_logo)]
   |        ^^^^^^^^^
   |
   = note: see issue #90418 <https://github.com/rust-lang/rust/issues/90418> for more information
   = help: add `#![feature(rustdoc_internals)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
